# fdbus

./: Android.bp  Android.mk  Android.mk.old  Makefile  README.rst  README.txt  fdbus-name-server.rc
appfw/: CFdbAFClient.cpp  CFdbAFComponent.cpp  CFdbAFServer.cpp  CFdbAPPFramework.cpp  CFdbAppFramework.cpp  CFdbMsgDispatcher.cpp
c/: fdbus_afcomponent.cpp  fdbus_clib.cpp  fdbus_client.cpp  fdbus_server.cpp
c/test/: fdbus_test_afcomponent_client.c  fdbus_test_afcomponent_server.c  fdbus_test_client.c  fdbus_test_msg_ids.h  fdbus_test_server.c
cmake/: CMakeLists.txt  clib.cmake  example.cmake  idl-gen.cmake  jni.cmake  rule_base.cmake  service.cmake  toolchain.cmake
cmake/pb-example/: CMakeLists.txt  clib-test.cmake  example.cmake  idl-gen.cmake  rule_base.cmake  toolchain.cmake
doc/: Fdbus_API.xlsx  Introduction_To_FDBus.pptx  authors.rst  conf.py  index.rst  manual.rst
example/: CFdbIfPerson.h  CFdbProtoMsgBuilder.cpp  CFdbProtoMsgBuilder.h  README.txt  client_server_object.cpp  fdb_test_client.cpp  fdb_test_notification_center.cpp  fdb_test_server.cpp  job_test.cpp
example/app-framework/: fdb_appfw_test.cpp
example/client-server/: fdb_test_client.cpp  fdb_test_server.cpp
example/config/: fdbus.fdb  host.fdb
example/config/server/: canservice.jpcc.com.fdb
example/idl/: common.base.Example.proto
example/job/: job_test.cpp
example/notification-center/: fdb_test_notification_center.cpp
example/object/: client_server_object.cpp
fdbus/: CBaseClient.cpp  CBaseEndpoint.cpp  CBaseServer.cpp  CEventSubscribeHandle.cpp  CFdbAFComponent.cpp  CFdbBaseContext.cpp  CFdbBaseObject.cpp  CFdbCJsonMsgBuilder.cpp  CFdbContext.cpp  CFdbEventRouter.cpp  CFdbMessage.cpp  CFdbMessageHeader.h  CFdbMsgDispatcher.cpp  CFdbSession.cpp  CFdbSessionContainer.cpp  CFdbSimpleSerializer.cpp  CFdbUDPSession.cpp  CFdbWatchdog.cpp  CFdbWatchdog.h  CIntraNameProxy.cpp  CIntraNameProxy.h  CLogProducer.cpp
idl/: common.base.Example.proto  common.base.MessageHeader.proto  common.base.NameServer.proto  common.base.Token.proto
idl/android_fix/: common.base.MessageHeader.proto  common.base.NameServer.proto
jni/src/cpp/: CJniAFComponent.cpp  CJniClient.cpp  CJniMessage.cpp  CJniServer.cpp  FdbusGlobal.cpp  FdbusGlobal.h
jni/src/java/ipc/fdbus/: Fdbus.java  FdbusAFComponent.java  FdbusAppListener.java  FdbusClient.java  FdbusClientListener.java  FdbusDeserializer.java  FdbusMessage.java  FdbusMessageEncoder.java  FdbusMessageParser.java  FdbusMsgBuilder.java  FdbusParcelable.java  FdbusSerializer.java  FdbusServer.java  FdbusServerListener.java  FdbusSimpleBuilder.java  SubscribeItem.java
jni/test/: AFComponentClient.java  AFComponentServer.java  CPerson.java  FdbusProtoBuilder.java  FdbusTestClient.java  FdbusTestServer.java  MediaClient.java  MediaServer.java  MyFdbusMessageEncoder.java  NotificationCenterClient.java  README.txt
log/: CLogFileManager.cpp  CLogPrinter.cpp  CLogPrinter.h  CLogProducer.cpp  fdb_log_config.cpp  main_log_client.cpp  main_log_server.cpp
platform/: CEventFd_eventfd.cpp
platform/linux/: CBaseMutexLock.cpp  CBasePipe.cpp  CBaseSemaphore.cpp  CBaseSysDep.cpp  CBaseThread.cpp
platform/socket/: CBaseSocketFactory.cpp
platform/socket/linux/: CLinuxSocket.cpp  CLinuxSocket.h
platform/socket/sckt-0.5/: sckt.cpp  sckt.hpp
platform/win/: CBaseMutexLock.cpp  CBasePipe.cpp  CBaseSemaphore.cpp  CBaseSysDep.cpp  CBaseThread.cpp  CEventFd.cpp
public/common_base/: CApiSecurityConfig.h  CBaseClient.h  CBaseEndpoint.h  CBaseEventLoop.h  CBaseFdWatch.h  CBaseJob.h  CBaseLoopTimer.h  CBaseMutexLock.h  CBaseNameProxy.h  CBaseNotification.h  CBasePipe.h  CBaseSemaphore.h  CBaseServer.h  CBaseSocketFactory.h  CBaseSysDep.h  CBaseThread.h  CBaseWorker.h  CEntityContainer.h  CEventFd.h  CEventSubscribeHandle.h  CFdEventLoop.h  CFdbAFClient.h  CFdbAFComponent.h  CFdbAFServer.h  CFdbAppFramework.h  CFdbBaseContext.h  CFdbBaseObject.h  CFdbCJsonMsgBuilder.h  CFdbContext.h  CFdbEventRouter.h  CFdbIfMessageHeader.h  CFdbIfMsgTokens.h  CFdbIfNameServer.h  CFdbMessage.h  CFdbMsgDispatcher.h  CFdbMsgSubscribe.h  CFdbProtoMsgBuilder.h  CFdbRawMsgBuilder.h  CFdbSession.h  CFdbSessionContainer.h  (+28 more)
python/: fdbus.py
python/test/: Readme.txt  fdbus_test_afcomponent_client.py  fdbus_test_afcomponent_server.py  fdbus_test_client.py  fdbus_test_notification_center.py  fdbus_test_server.py
security/: CApiSecurityConfig.cpp  CFdbToken.cpp  CFdbusSecurityConfig.cpp  CFdbusSecurityConfig.h  CHostSecurityConfig.cpp  CHostSecurityConfig.h  CServerSecurityConfig.cpp  CServerSecurityConfig.h
server/: CAddressAllocator.cpp  CAddressAllocator.h  CBaseNameProxy.cpp  CBaseNameProxy.h  CFdbIfNameServer.h  CFdbLogCache.cpp  CFdbLogCache.h  CHostProxy.cpp  CHostProxy.h  CHostServer.cpp  CHostServer.h  CInterNameProxy.cpp  CInterNameProxy.h  CIntraNameProxy.cpp  CIntraNameProxy.h  CLogFileManager.cpp  CLogFileManager.h  CLogPrinter.cpp  CLogPrinter.h  CNameServer.cpp  CNameServer.h  CNsConfig.h  fdb_log_config.h  main_hs.cpp  main_lc.cpp  main_le.cpp  main_lh.cpp  main_log_client.cpp  main_log_server.cpp  main_ls.cpp  main_nc.cpp  main_ns.cpp  main_xclient.cpp  main_xserver.cpp
utils/: CBaseNameProxy.h  CFdbIfMessageHeader.h  CFdbUDPSession.h  CNsConfig.h  Log.h  fdb_option_parser.c  fdb_option_parser.cpp  fdb_string_helpers.h
utils/cJSON/: cJSON.c
worker/: CBaseEventLoop.cpp  CBaseWorker.cpp  CFdEventLoop.cpp  CSysFdWatch.cpp  CThreadEventLoop.cpp  README.txt
